crates/index-scheduler/src/queue/snapshots/test.rs/test_auto_deletion_of_tasks/task_queue_is_full.snap
---
source: crates/index-scheduler/src/queue/test.rs
---
[
  {
    "uid": 0,
    "batchUid": 0,
    "enqueuedAt": "[date]",
    "startedAt": "[date]",
    "finishedAt": "[date]",
    "error": null,
    "canceledBy": null,
    "details": {
      "IndexInfo": {
        "primary_key": null,
        "new_index_uid": null,
        "old_index_uid": null
      }
    },
    "status": "succeeded",
    "kind": {
      "indexCreation": {
        "index_uid": "doggo",
        "primary_key": null
      }
    }
  },
  {
    "uid": 1,
    "batchUid": 1,
    "enqueuedAt": "[date]",
    "startedAt": "[date]",
    "finishedAt": "[date]",
    "error": {
      "message": "Index `doggo` already exists.",
      "code": "index_already_exists",
      "type": "invalid_request",
      "link": "https://docs.hanzo.ai/docs/errors#index_already_exists"
    },
    "canceledBy": null,
    "details": {
      "IndexInfo": {
        "primary_key": null,
        "new_index_uid": null,
        "old_index_uid": null
      }
    },
    "status": "failed",
    "kind": {
      "indexCreation": {
        "index_uid": "doggo",
        "primary_key": null
      }
    }
  },
  {
    "uid": 2,
    "batchUid": null,
    "enqueuedAt": "[date]",
    "startedAt": "[date]",
    "finishedAt": "[date]",
    "error": null,
    "canceledBy": null,
    "details": {
      "IndexInfo": {
        "primary_key": null,
        "new_index_uid": null,
        "old_index_uid": null
      }
    },
    "status": "enqueued",
    "kind": {
      "indexCreation": {
        "index_uid": "doggo",
        "primary_key": null
      }
    }
  },
  {
    "uid": 3,
    "batchUid": null,
    "enqueuedAt": "[date]",
    "startedAt": "[date]",
    "finishedAt": "[date]",
    "error": null,
    "canceledBy": null,
    "details": {
      "IndexInfo": {
        "primary_key": null,
        "new_index_uid": null,
        "old_index_uid": null
      }
    },
    "status": "enqueued",
    "kind": {
      "indexCreation": {
        "index_uid": "doggo",
        "primary_key": null
      }
    }
  }
]
